--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   webview_flutter: ^2.0.0
   oauth2: ^2.0.0
   oauth2_client: ^3.2.1
+  flutter_secure_storage: ^8.0.0
 
 dev_dependencies:
   flutter_test:
