--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   oauth2: ^2.0.0
   oauth2_client: ^3.2.1
   flutter_secure_storage: ^8.0.0
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
