--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   oauth2_client: ^3.2.1
   flutter_secure_storage: ^8.0.0
   connectivity: ^3.0.6
+  sqflite: ^2.0.0
 
 dev_dependencies:
   flutter_test:
