--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   connectivity: ^3.0.6
   sqflite: ^2.0.0
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
